# RealEstateAgency

./: db.sqlite3
realestate/: admin.py  models.py  urls.py  views.py
realestate/ImageEditor/: CMakeLists.txt  ImageEditor.cpp  main.cpp
realestate/migrations/: 0001_initial.py  0002_houses_banner.py  0003_rename_banner_houses_image.py  0004_appointment_client_house_image_realtor_delete_houses_and_more.py  0005_alter_appointment_time.py  0006_alter_appointment_realtor.py  0007_appointment_description.py
realestate/static/js/: script.js
realestate/static/styles/: house_styles.css  styles.css  top.css
realestate/templates/: house.html  index.html  realtors.html
storfront/: settings.py  urls.py
